Switch to fixed/floating nav bar, add sponsor categories, update Jumping Rivers logo

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -225,6 +225,7 @@ h3 {
     font-weight: 600;
     margin-top: 20px;
     font-size: 42px;
+    text-align: center;
 }
 
 footer {
